# ParseMoneyForward

./: .env.example  .gitignore  README.md  month-page-id.json  pyproject.toml
src/parsemoneyforward/: main.py  month-page-id.json
