[project]
name = "parsemoneyforward"
version = "1.1.0"
description = "マネーフォワードの口座は、一括で更新することが可能です。ただし、すべての口座を一括で更新するためには、プレミアムプランへの加入が必要です。次に、今月の残額計算では、銀行口座の残高、クレジットカードの使用額、そして今月の支出を算出し、その結果をLineに送信します。また、証券口座に関しても、残高情報を取得し、Lineに送信します。"
authors = [
    { name = "riku.yamada"}
]
dependencies = [
    "selenium>=4.24.0",
    "python-dotenv>=1.0.1",
    "random-user-agent>=1.0.1",
    "requests>=2.32.3",
    "bs4>=0.0.2",
    "isort>=5.13.2",
    "jpholiday>=0.1.10",
    "python-dateutil>=2.9.0.post0",
    "logrelay>=0.2.0",
    "pyotp>=2.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/parsemoneyforward"]
